# SerialSalesMan

./: CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  makefile  queue.c  queue.h  tscp.h  tsp  tsp.c  tsp2.c  tsp3.c  valgrind.rpt
SERIAL SALES MAN/r004ps/: r004ps.vtune
SERIAL SALES MAN/r004ps/sqlite-db/: dicer.db
SERIAL SALES MAN/r005ps/: r005ps.vtune
SERIAL SALES MAN/r005ps/sqlite-db/: dicer.db
SERIAL SALES MAN/r006ps/: r006ps.vtune
SERIAL SALES MAN/r006ps/sqlite-db/: dicer.db
SERIAL SALES MAN/r007ps/: r007ps.vtune
SERIAL SALES MAN/r007ps/sqlite-db/: dicer.db
